tcw3/designer/tests/bad/input_circular_this.tcwdl
pub comp crate::Comp2 {
    // `this` is available only after all fields are initialized
    wire wire: *const () = |&this| this as *const _ as *const ();
}
